--- a/skeleton-auto.css
+++ b/skeleton-auto.css
@@ -267,9 +267,16 @@
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 #avatar {
     width: 100%;
     max-height: 80px;
+    object-fit: none !important;
 }
 
 #avatar + h1 {
